[project]
name = "RepAssignment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "michaelmusty", email = "michaelmusty@gmail.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "ortools>=9.9.3963",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
